package pers.prover07.dp.structural.facade;

/**
 * @author 小丶木曾义仲丶哈牛柚子露丶蛋卷
 * @version 1.0
 * @date 2022/5/15 14:26
 */
public class AirCondition {

    public void on() {
        System.out.println("AirCondition.on...");
    }

    public void off() {
        System.out.println("AirCondition.off...");
    }

}
